ascii effect class

--- a/ascii_stream_gpu/ascii_stream_gpu.vcxproj
+++ b/ascii_stream_gpu/ascii_stream_gpu.vcxproj
@@ -30,10 +30,13 @@
     <ClCompile Include="src\capture\ScreenCapture.cpp" />
     <ClCompile Include="src\dx\DxContext.cpp" />
     <ClCompile Include="src\processing\core\FrameProcessor.cpp" />
+    <ClCompile Include="src\processing\effects\ASCII\AsciiEffect.cpp" />
     <ClCompile Include="src\render\D3dRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\processing\core\FrameProcessor.h" />
+    <ClInclude Include="src\processing\effects\ASCII\AsciiEffect.h" />
+    <ClInclude Include="src\processing\effects\IEffect.h" />
     <ClInclude Include="src\processing\res\ascii_edges.h" />
     <ClInclude Include="src\processing\res\ascii_kernel.h" />
     <ClInclude Include="src\processing\res\ascii_scale.h" />
