--- a/ascii_stream_gpu/ascii_stream_gpu.vcxproj
+++ b/ascii_stream_gpu/ascii_stream_gpu.vcxproj
@@ -12,20 +12,8 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="src\processing\effects\ASCII\AsciiKernel.cu" />
-    <CudaCompile Include="src\processing\effects\ASCII\chars_kernel.cu">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </CudaCompile>
-    <CudaCompile Include="src\processing\effects\ASCII\edges_kernel.cu">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="src\app\Main.cpp" />
     <ClCompile Include="src\app\Window.cpp" />
     <ClCompile Include="src\capture\ScreenCapture.cpp" />
@@ -36,6 +24,7 @@
     <ClCompile Include="src\render\D3dRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\app\WindowRole.h" />
     <ClInclude Include="src\processing\core\FrameProcessor.h" />
     <ClInclude Include="src\processing\cuda\CudaUtils.h" />
     <ClInclude Include="src\processing\effects\ASCII\AsciiEffect.h" />
