--- a/ascii_stream_gpu/ascii_stream_gpu.vcxproj
+++ b/ascii_stream_gpu/ascii_stream_gpu.vcxproj
@@ -19,6 +19,13 @@
     <ClCompile Include="src\app\Window.cpp" />
     <ClCompile Include="src\capture\ScreenCapture.cpp" />
     <ClCompile Include="src\dx\DxContext.cpp" />
+    <ClCompile Include="src\imgui\backends\imgui_impl_dx11.cpp" />
+    <ClCompile Include="src\imgui\backends\imgui_impl_win32.cpp" />
+    <ClCompile Include="src\imgui\imgui.cpp" />
+    <ClCompile Include="src\imgui\imgui_demo.cpp" />
+    <ClCompile Include="src\imgui\imgui_draw.cpp" />
+    <ClCompile Include="src\imgui\imgui_tables.cpp" />
+    <ClCompile Include="src\imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\processing\core\FrameProcessor.cpp" />
     <ClCompile Include="src\processing\effects\ASCII\AsciiEffect.cpp" />
     <ClCompile Include="src\processing\effects\EffectBase.cpp" />
@@ -29,6 +36,14 @@
     <ClInclude Include="src\app\Hotkeys.h" />
     <ClInclude Include="src\app\WindowRole.h" />
     <ClInclude Include="src\dx\DxUtils.h" />
+    <ClInclude Include="src\imgui\backends\imgui_impl_dx11.h" />
+    <ClInclude Include="src\imgui\backends\imgui_impl_win32.h" />
+    <ClInclude Include="src\imgui\imconfig.h" />
+    <ClInclude Include="src\imgui\imgui.h" />
+    <ClInclude Include="src\imgui\imgui_internal.h" />
+    <ClInclude Include="src\imgui\imstb_rectpack.h" />
+    <ClInclude Include="src\imgui\imstb_textedit.h" />
+    <ClInclude Include="src\imgui\imstb_truetype.h" />
     <ClInclude Include="src\processing\core\FrameProcessor.h" />
     <ClInclude Include="src\processing\cuda\CudaUtils.h" />
     <ClInclude Include="src\processing\effects\ASCII\AsciiEffect.h" />
